--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ban": "0.0.0",
     "catch": "^1.0.48",
     "discord.js": "^12.3.1",
+    "mongoose": "^5.10.7",
     "ms": "^2.1.2",
     "tag": "^0.4.16",
     "user": "0.0.0"
